added weather block to the selectable widgets and updated the widget itself

--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -19,6 +19,9 @@
                 width: 50%;
                 min-width: 190px;
             }
+            .quarterwidth{
+                width: 25%;
+            }
             .edit{
                 position: absolute;
                 top: -10px;
@@ -89,7 +92,7 @@
                 },
                 widgets: {
                     type: 'Array',
-                    value: ['switch','button','shading'],
+                    value: ['switch','button','shading','weather-block'],
                 },
             },
             openEditDialog: function(){
