--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -6,6 +6,8 @@
 <link rel="import" href="widgets/homecon-widget-button.html">
 <link rel="import" href="widgets/homecon-widget-switch.html">
 <link rel="import" href="widgets/homecon-widget-shading.html">
+<link rel="import" href="widgets/homecon-widget-weather-block.html">
+
 
 <dom-module is="homecon-pages-widget">
     <template>
