added chart widget using highcharts

--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -92,7 +92,7 @@
                 },
                 widgets: {
                     type: 'Array',
-                    value: ['switch','button','shading','weather-block'],
+                    value: ['switch','button','shading','weather-block','chart'],
                 },
             },
             openEditDialog: function(){
