--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -7,7 +7,7 @@
 <link rel="import" href="widgets/homecon-widget-switch.html">
 <link rel="import" href="widgets/homecon-widget-shading.html">
 <link rel="import" href="widgets/homecon-widget-weather-block.html">
-
+<link rel="import" href="widgets/homecon-widget-chart.html">
 
 <dom-module is="homecon-pages-widget">
     <template>
