updated weather plugin

--- a/app/src/widgets/homecon-widget-chart.html
+++ b/app/src/widgets/homecon-widget-chart.html
@@ -35,7 +35,7 @@
         </style>
         
         <homecon-web-socket-object id="websocketObject" event="timeseries" path="[[config.path]]" data="{{data}}" auto></homecon-web-socket-object>
-        <homecon-web-socket-object id="websocketObject" event="append_timeseries" path="[[config.path]]" data="{{appendData}}"></homecon-web-socket-object>
+        <homecon-web-socket-object id="appendWebsocketObject" event="append_timeseries" path="[[config.path]]" data="{{appendData}}"></homecon-web-socket-object>
 
         <div id="container"></div>
 
