updated charts widget to update values and be more data efficient

--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -46,9 +46,10 @@
                 },
             },
             observers: [
-                'updateWidget(widget.type,widget.config)'
+                'updateWidget(widget.type)'
             ],
-            updateWidget: function(type,config){
+            updateWidget: function(type){
+
                 var container = this.$.container;
 
                 // import the widget
