--- a/app/src/widgets/homecon-widget-chart.html
+++ b/app/src/widgets/homecon-widget-chart.html
@@ -138,7 +138,7 @@
                 }
                 else{
                     // remove the old data
-                    chart.series[0].setData([]);
+                    series.setData([]);
                 }
 
                 // add the data
