updated chart title setting and style

--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -22,6 +22,9 @@
             .quarterwidth{
                 width: 25%;
             }
+            .center{
+                text-align: center;
+            }
             .edit{
                 position: absolute;
                 top: -10px;
