added a button with status indicator to widgets

--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -8,6 +8,7 @@
 <link rel="import" href="widgets/homecon-widget-shading.html">
 <link rel="import" href="widgets/homecon-widget-weather-block.html">
 <link rel="import" href="widgets/homecon-widget-chart.html">
+<link rel="import" href="widgets/homecon-widget-status-button.html">
 
 <dom-module is="homecon-pages-widget">
     <template>
