--- a/app/src/widgets/homecon-base-button.html
+++ b/app/src/widgets/homecon-base-button.html
@@ -13,7 +13,9 @@
                 position: relative;
             }
             .button {
-                @apply(--button-style);
+                text-transform: none;
+                font-size: 16px;
+                font-weight: 700;
             }
         </style>
         
