--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -41,7 +41,7 @@
         
         <homecon-section type="{{section.config.type}}" title="{{section.config.title}}">
 
-            <sortable-js on-update="_updateWidgetsOrder" disabled="{{!edit}}" class="horizontal layout wrap center">
+            <sortable-js on-update="_updateWidgetsOrder" disabled="{{!edit}}" class="horizontal layout wrap">
                 <template is="dom-repeat" id="widgets" items="{{section.widgets}}" as="widgetPath">
 
                     <homecon-pages-widget path="{{widgetPath}}" edit="[[edit]]"></homecon-pages-widget>
@@ -95,7 +95,7 @@
                 },
                 widgets: {
                     type: 'Array',
-                    value: ['switch','button','shading','weather-block','chart'],
+                    value: ['switch','button','status-button','shading','weather-block','chart'],
                 },
             },
             openEditDialog: function(){
