changed schedules plugin and started creating a widget

--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -95,7 +95,7 @@
                 },
                 widgets: {
                     type: 'Array',
-                    value: ['switch','button','status-button','shading','weather-block','chart'],
+                    value: ['switch','button','status-button','alarm','shading','weather-block','chart'],
                 },
             },
             openEditDialog: function(){
