--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -9,6 +9,7 @@
 <link rel="import" href="widgets/homecon-widget-weather-block.html">
 <link rel="import" href="widgets/homecon-widget-chart.html">
 <link rel="import" href="widgets/homecon-widget-status-button.html">
+<link rel="import" href="widgets/homecon-widget-alarm.html">
 
 <dom-module is="homecon-pages-widget">
     <template>
