--- a/app/src/view-editor.html
+++ b/app/src/view-editor.html
@@ -37,7 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <homecon-page-header title="Editor" icon="pagebuilder_pagebuilder"></homecon-page-header>
             <homecon-section id="editorSection" type="raised">
-                <paper-toggle-button active={{edit}}>Edit</paper-toggle-button>
+                <paper-toggle-button checked="{{edit}}">Edit</paper-toggle-button>
             </homecon-section>
             
         </homecon-page>
