--- a/app/src/widgets/homecon-widget-chart.html
+++ b/app/src/widgets/homecon-widget-chart.html
@@ -77,7 +77,7 @@
             ],
 
             ready: function(){
-                this.data = [];
+                this.pathToSeries = {};
                 this._createChart(this.$.container);
 
                 var that = this;
@@ -95,14 +95,14 @@
                 
                 var path = event.model.__data__.path;
 
-                var series = this._getSeries(path);
-
-                if( series == null ){
-                    // add a new series
-                    series = this.chart.addSeries({});
-                    series._path = path;
+                if( path in this.pathToSeries ){
+                    var series = this.pathToSeries[path];
                 }
-
+                else{
+                    // add a new series
+                    var series = this.chart.addSeries({});
+                    this.pathToSeries[path] = series;
+                }
                 // add the data
                 var chartdata = []
                 for(var i=0;i<initialData.length;i++){
@@ -112,12 +112,11 @@
             },
 
             _appendDataChanged: function(event,appendData){
-
                 var path = event.model.__data__.path;
-
-                var series = this._getSeries(path);
-                if( series != null ){
+                if( path in this.pathToSeries ){
+                    var series = this.pathToSeries[path];
                     series.addPoint([appendData[0]*1000,appendData[1]]);
+                    
                 }
             },
 
