--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -167,6 +167,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             load: function(){
                 this.$.components.load()
+                this.$.actions.load()
             }
 
         });
