removed filter from actions dropdown list as new actions are not passed on when the filter does not exactly match, neither are deleted actions rpopagated. Now all actions are available in each alarm

--- a/app/src/widgets/homecon-widget-alarm.html
+++ b/app/src/widgets/homecon-widget-alarm.html
@@ -48,7 +48,7 @@
         </style>
         
         <homecon-web-socket-object event="list_schedules" path="[[config.filter]]" data="{{alarms}}" auto></homecon-web-socket-object>
-        <homecon-web-socket-object event="list_actions" path="[[config.filter]]" data="{{actions}}" auto></homecon-web-socket-object>
+        <homecon-web-socket-object event="list_actions" path="" data="{{actions}}" auto></homecon-web-socket-object>
 
         <homecon-web-socket-sender id="websocket"></homecon-web-socket-sender>
 
